# ml-observability-argus

./: .gitignore  Dockerfile  Dockerfile.dashboard  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  start.sh
configs/: config.yaml
dashboard/: app.py
deployment/: DEPLOYMENT.md  render.yaml
deployment/streamlit/.streamlit/: config.toml
scripts/: demo.py  generate_assets.py  make_demo_gif.py  simulate_drift.py  train_initial_model.py
src/: __init__.py
src/api/: main.py  schemas.py
src/api/routes/: health.py  monitor.py  predict.py
src/data/: __init__.py  drift_simulator.py  generator.py  preprocessing.py
src/models/: __init__.py  evaluator.py  registry.py  trainer.py
src/monitoring/: __init__.py  drift_detector.py  performance_monitor.py  root_cause_analyzer.py
src/retraining/: __init__.py  pipeline.py  trigger.py
src/utils/: __init__.py  config.py  logging_config.py
tests/: test_api.py  test_dashboard.py  test_drift_detection.py  test_full_ui.py  test_navigation.py  test_retraining.py
